Security Config 수정